side filer collapse updated and fixed

--- a/client/web-app/styles/app.css
+++ b/client/web-app/styles/app.css
@@ -1978,16 +1978,7 @@ body, html {
     background: transparent;
 }
 
-#programInfo {
-    height:40px;
-    width:40%;
-    max-width: 500px;
-    display:table-cell;
-    display:inline-block;
-    margin-left:1px;
-    background: transparent;
-    float:left;
-}
+
 
 #title {
     height:15px;
@@ -2000,7 +1991,6 @@ body, html {
 
 #description {
     height:25px;
-    width:100%;
     text-align:left;
     overflow:hidden;
     padding-left:10px;
@@ -2329,14 +2319,11 @@ body, html {
 }
 
 .navbar-toggle {
-    margin-top: 2px;
+    margin-top: 1px;
 }
 
-
-.navbar-header{
-    max-width: 50%;
-}
 
 .navbar-default .navbar-toggle {
     border-width: 2px;
 }
+
